# Assignment3

./: .coverage  .gitignore  Assignment3_genAIuse.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
part2/: README.md  mesh_refinement.ipynb
part4/: README.md  failed_example.ipynb  mesh_refinement.ipynb  pure_shear.ipynb
src/finiteelementanalysis/: assemble_global.py  discretization_demo_helper_fcns.py  local_element.py  pre_process.py  pre_process_demo_helper_fcns.py  solver.py  visualize.py
src/finiteelementanalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_discretization.py  test_discretization_demo_helper_fcns.py  test_example_functions.py  test_local_element.py  test_pre_process.py  test_pre_process_demo_helper_fcns.py  test_solver.py
tutorials/: full_code_example_1.py  tutorial_discretization.ipynb  tutorial_sparse_solver.ipynb  tutorials.py
tutorials/toy_example_code_comprehension/: equations.py  main.py  solver.py
