[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "finiteelementanalysis"
version = "0.0.0"
authors = [
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "finiteelementanalysis workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.23.2",
    "pytest==7.1.2",
    "pytest-cov==3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis"
"Bug Tracker" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis/issues"