[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "finiteelementanalysis"
version = "0.0.0"
authors = [
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "finiteelementanalysis workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "gmsh==4.13.1",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pyparsing==3.2.1",
    "pytest-cov==6.0.0",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "setuptools==75.8.0",
    "six==1.17.0",
    "wheel==0.45.1"
]

[project.urls]
"Homepage" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis"
"Bug Tracker" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis/issues"